# axum-ts-codegen-example

./: .gitignore  Cargo.toml  Makefile  README.md  openapi-ts.config.ts  openapi.json  package-lock.json  package.json
examples/: README.md
examples/rn/: App.tsx  PostScreen.tsx  README.md  api-client.ts
examples/shared/: api.ts  index.ts  posts.ts  query-client.ts  users.ts
examples/web/: PostsPage.tsx  main.tsx
src/: api.rs  dto.rs  main.rs
ts/hey-api/: index.ts  sdk.gen.ts  types.gen.ts
ts/hey-api/@tanstack/: react-query.gen.ts
ts/openapi/: api-types.ts
ts/ts-rs/: CreatePostRequest.ts  ErrorResponse.ts  ListResponse.ts  PostResponse.ts  PostStatus.ts
