[package]
name = "axum-ts-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"
utoipa-axum = "0.2"
ts-rs = { version = "10", features = ["serde-compat"] }
uuid = { version = "1", features = ["v4"] }
